# SteamWishlistCalendar

./: .gitignore  README.md  pyproject.toml  requirements.txt  swc.py  swc_api.py
.github/: dependabot.yml
.github/workflows/: analyze-wishlist.yml  build.yml  test.yml
output/: failed_deductions.txt  history.json  successful.txt  wishlist.ics
